# HW_WEB_07

./: config.ini  my_select.py  pyproject.toml  seed.py
migration/versions/: 657d63993e33_init.py
src/: db.py  models.py
